Make multi-gpu tests independent of intermittent display changes on OSX

For currently unknown reasons the display change callback is triggered
with kCGDisplayAddFlag flag while running the gpu tests. Since it might
change the active gpu at any time it can make the tests fail.

For now let's make the tests reliable but further investigation on the
callback will follow.

BUG=616759

R=kbr@chromium.org, piman@chromium.org, zmo@chromium.org

Review-Url: https://codereview.chromium.org/2034763002
Cr-Commit-Position: refs/heads/master@{#397487}

Former-commit-id: f4b4acf1f2810b76dea587e7fb69e47556c948f4